--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <!-- Homepage -->
-    <section id="homepage" class="page" style="background-image: url('homepage.jpg');">
+    <!-- Homepage with GIF background -->
+    <section id="homepage" class="page" style="background-image: url('homepage.gif');">
         <h1>Welcome to the Personal Finance Tracker</h1>
         <!-- Add any additional content for the homepage -->
     </section>
