--- a/index.html
+++ b/index.html
@@ -10,59 +10,29 @@
 </head>
 
 <body>
-    <!-- Homepage with GIF background -->
-    <section id="homepage" class="page" style="background-image: url('homepage.gif');">
+    <div class="menu-toggle">
+        <div class="menu-icon"></div>
+    </div>
+    <div class="menu">
+        <ul>
+            <li><a href="#dashboard">Dashboard</a></li>
+            <li><a href="#settings">Settings</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </div>
+    <section id="homepage" class="page">
         <h1>Welcome to the Personal Finance Tracker</h1>
-        <!-- Add any additional content for the homepage -->
+        <div class="blocks">
+            <a href="#income" class="block">Income</a>
+            <a href="#expenses" class="block">Expenses</a>
+            <a href="#savings" class="block">Savings</a>
+            <a href="#reports" class="block">Reports</a>
+        </div>
     </section>
 
-    <!-- Dashboard -->
-    <section id="dashboard" class="page" style="background-image: url('dashboard.jpg');">
-        <h2>Dashboard</h2>
-        <!-- Dashboard content goes here -->
-    </section>
-
-    <!-- Income Page -->
-    <section id="income" class="page" style="background-image: url('incomepage.jpg');">
-        <h2>Income Page</h2>
-        <!-- Income page content goes here -->
-    </section>
-
-    <!-- Expenses Page -->
-    <section id="expenses" class="page" style="background-image: url('expensespage.jpg');">
-        <h2>Expenses Page</h2>
-        <!-- Expenses page content goes here -->
-    </section>
-
-    <!-- Savings Goals Page -->
-    <section id="savings" class="page" style="background-image: url('savingspage.jpg');">
-        <h2>Savings Goals Page</h2>
-        <!-- Savings goals page content goes here -->
-    </section>
-
-    <!-- Reports Page -->
-    <section id="reports" class="page" style="background-image: url('reportspage.jpg');">
-        <h2>Reports Page</h2>
-        <!-- Reports page content goes here -->
-    </section>
-
-    <!-- Settings Page -->
-    <section id="settings" class="page" style="background-image: url('settingspage.jpg');">
-        <h2>Settings Page</h2>
-        <!-- Settings page content goes here -->
-    </section>
-
-    <!-- About Page -->
-    <section id="about" class="page" style="background-image: url('aboutpage.jpg');">
-        <h2>About Page</h2>
-        <!-- About page content goes here -->
-    </section>
-
-    <!-- Contact Page -->
-    <section id="contact" class="page" style="background-image: url('contactpage.jpg');">
-        <h2>Contact Page</h2>
-        <!-- Contact page content goes here -->
-    </section>
+    <!-- Other sections/pages -->
+    <!-- Add other sections/pages with their respective background images -->
 
     <script src="script.js"></script>
 </body>
