--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </div>
-    <section id="homepage" class="page">
+    <section id="homepage" class="page" style="background-image: url('homepage.gif');">
         <h1>Welcome to the Personal Finance Tracker</h1>
         <div class="blocks">
             <a href="#income" class="block">Income</a>
