--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
 <body>
     <div class="menu-toggle">
-        <div class="menu-icon"></div>
+        <div class="menu-icon">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </div>
     <div class="menu">
         <ul>
