--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
     </div>
     <div class="menu">
         <ul>
-            <li><a href="#dashboard">Dashboard</a></li>
-            <li><a href="#settings">Settings</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="dashboard.html">Dashboard</a></li>
+            <li><a href="settings.html">Settings</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
     <section id="homepage" class="page" style="background-image: url('homepage.gif');">
         <h1>Welcome to the Personal Finance Tracker</h1>
         <div class="blocks">
-            <a href="#income" class="block">Income</a>
-            <a href="#expenses" class="block">Expenses</a>
-            <a href="#savings" class="block">Savings</a>
-            <a href="#reports" class="block">Reports</a>
+            <a href="income.html" class="block">Income</a>
+            <a href="expenses.html" class="block">Expenses</a>
+            <a href="savings.html" class="block">Savings</a>
+            <a href="reports.html" class="block">Reports</a>
         </div>
     </section>
 
