--- a/index.html
+++ b/index.html
@@ -8,26 +8,28 @@
     <title>Welcome to the Website</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        body {
-            background-image: url('index.gif');
-            background-size: cover;
-            background-repeat: no-repeat;
-            height: 100vh;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
+        .button {
+            display: block;
+            width: 200px;
+            padding: 10px;
+            margin: 10px auto;
+            text-align: center;
+            background-color: #007bff;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+
+        .button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
 
 <body>
     <h1>Welcome to the Website</h1>
-    <div>
-        <a href="login.html">Login</a>
-        <a href="signup.html">Signup</a>
-    </div>
+    <a href="login.html" class="button">Login</a>
+    <a href="signup.html" class="button">Sign Up</a>
 </body>
 
 </html>
