--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Welcome to the Website</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        .button {
+        .block {
             display: block;
             width: 200px;
             padding: 10px;
@@ -20,7 +20,7 @@
             border-radius: 5px;
         }
 
-        .button:hover {
+        .block:hover {
             background-color: #0056b3;
         }
     </style>
@@ -28,8 +28,8 @@
 
 <body>
     <h1>Welcome to the Website</h1>
-    <a href="login.html" class="button">Login</a>
-    <a href="signup.html" class="button">Sign Up</a>
+    <a href="login.html" class="block">Login</a>
+    <a href="signup.html" class="block">Sign Up</a>
 </body>
 
 </html>
