--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <title>Welcome to the Website</title>
     <link rel="stylesheet" href="styles.css">
     <style>
+        body {
+            background-image: url('index.gif');
+            background-size: cover;
+            background-repeat: no-repeat;
+            height: 100vh;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
         .block {
             display: block;
             width: 200px;
@@ -30,6 +41,8 @@
     <h1>Welcome to the Website</h1>
     <a href="login.html" class="block">Login</a>
     <a href="signup.html" class="block">Sign Up</a>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
