--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column; /* Added to align items vertically */
         }
 
         .block {
@@ -39,8 +40,10 @@
 
 <body>
     <h1>Welcome to the Website</h1>
-    <a href="login.html" class="block">Login</a>
-    <a href="signup.html" class="block">Sign Up</a>
+    <div>
+        <a href="login.html" class="block">Login</a>
+        <a href="signup.html" class="block">Sign Up</a>
+    </div>
 
     <script src="script.js"></script>
 </body>
