--- a/signup.html
+++ b/signup.html
@@ -81,8 +81,8 @@
                 }
             });
 
-            // Redirect to homepage or login page
-            window.location.href = 'index.html'; // Redirect to homepage or login page
+            // Redirect to homepage.html
+            window.location.href = 'homepage.html';
         });
     </script>
 </body>
