--- a/income.html
+++ b/income.html
@@ -5,31 +5,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to the Website</title>
+    <title>Income</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        .block {
-            display: block;
-            width: 200px;
-            padding: 10px;
-            margin: 10px auto;
-            text-align: center;
-            background-color: #007bff;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-
-        .block:hover {
-            background-color: #0056b3;
-        }
-    </style>
 </head>
 
 <body>
-    <h1>Welcome to the Website</h1>
-    <a href="login.html" class="block">Login</a>
-    <a href="signup.html" class="block">Sign Up</a>
+    <h1>Total Income Till Now: ₹<span id="total-income">0</span></h1>
+    <div class="blocks">
+        <h2>Add Income Source</h2>
+        <form id="income-form">
+            <label for="source">Source:</label>
+            <input type="text" id="source" name="source" required><br><br>
+            <label for="amount">Amount:</label>
+            <input type="number" id="amount" name="amount" required><br><br>
+            <label for="frequency">Frequency:</label>
+            <select id="frequency" name="frequency" required>
+                <option value="monthly">Monthly</option>
+                <option value="weekly">Weekly</option>
+            </select><br><br>
+            <button type="submit">Add</button>
+        </form>
+    </div>
+    <div class="history">
+        <h2>Income History</h2>
+        <ul id="income-history">
+            <!-- List of income items will be dynamically added here -->
+        </ul>
+        <button id="more-btn">More</button>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
