--- a/income.html
+++ b/income.html
@@ -5,34 +5,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Income</title>
+    <title>Income Page</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            background-image: url('income.gif');
+            background-size: cover;
+            background-position: center;
+            text-align: center;
+        }
+
+        #total-income,
+        #income-form,
+        #income-history {
+            display: inline-block;
+            margin: 0 auto;
+            text-align: left;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Total Income Till Now: ₹<span id="total-income">0</span></h1>
-    <div class="blocks">
-        <h2>Add Income Source</h2>
-        <form id="income-form">
-            <label for="source">Source:</label>
-            <input type="text" id="source" name="source" required><br><br>
-            <label for="amount">Amount:</label>
-            <input type="number" id="amount" name="amount" required><br><br>
-            <label for="frequency">Frequency:</label>
-            <select id="frequency" name="frequency" required>
-                <option value="monthly">Monthly</option>
-                <option value="weekly">Weekly</option>
-            </select><br><br>
-            <button type="submit">Add</button>
-        </form>
-    </div>
-    <div class="history">
-        <h2>Income History</h2>
-        <ul id="income-history">
-            <!-- List of income items will be dynamically added here -->
-        </ul>
-        <button id="more-btn">More</button>
-    </div>
+    <h1>Income Page</h1>
+    <div id="total-income">0</div>
+
+    <h2>Add Income</h2>
+    <form id="income-form">
+        <label for="source">Source:</label>
+        <input type="text" id="source" name="source" required><br><br>
+        <label for="amount">Amount:</label>
+        <input type="number" id="amount" name="amount" required><br><br>
+        <label for="frequency">Frequency:</label>
+        <select id="frequency" name="frequency">
+            <option value="monthly">Monthly</option>
+            <option value="weekly">Weekly</option>
+        </select><br><br>
+        <button type="submit">Add Income</button>
+    </form>
+
+    <h2>Income History</h2>
+    <ul id="income-history"></ul>
+    <button id="more-btn">Show More</button>
 
     <script src="script.js"></script>
 </body>
