--- a/income.html
+++ b/income.html
@@ -22,6 +22,30 @@
             margin: 0 auto;
             text-align: left;
         }
+
+        .income-entry {
+            margin-bottom: 10px;
+        }
+
+        .edit-btn,
+        .done-btn,
+        .delete-btn {
+            display: none;
+        }
+
+        .edit-btn,
+        .delete-btn {
+            margin-left: 5px;
+        }
+
+        .edit-btn.active,
+        .delete-btn.active {
+            display: inline-block;
+        }
+
+        .edit-btn.active + .done-btn {
+            display: inline-block;
+        }
     </style>
 </head>
 
@@ -35,11 +59,6 @@
         <input type="text" id="source" name="source" required><br><br>
         <label for="amount">Amount:</label>
         <input type="number" id="amount" name="amount" required><br><br>
-        <label for="frequency">Frequency:</label>
-        <select id="frequency" name="frequency">
-            <option value="monthly">Monthly</option>
-            <option value="weekly">Weekly</option>
-        </select><br><br>
         <button type="submit">Add Income</button>
     </form>
 
