--- a/income.html
+++ b/income.html
@@ -25,6 +25,9 @@
 
         .income-entry {
             margin-bottom: 10px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
         .edit-btn,
