--- a/income.html
+++ b/income.html
@@ -22,33 +22,6 @@
             margin: 0 auto;
             text-align: left;
         }
-
-        .income-entry {
-            margin-bottom: 10px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .edit-btn,
-        .done-btn,
-        .delete-btn {
-            display: none;
-        }
-
-        .edit-btn,
-        .delete-btn {
-            margin-left: 5px;
-        }
-
-        .edit-btn.active,
-        .delete-btn.active {
-            display: inline-block;
-        }
-
-        .edit-btn.active + .done-btn {
-            display: inline-block;
-        }
     </style>
 </head>
 
@@ -62,6 +35,11 @@
         <input type="text" id="source" name="source" required><br><br>
         <label for="amount">Amount:</label>
         <input type="number" id="amount" name="amount" required><br><br>
+        <label for="frequency">Frequency:</label>
+        <select id="frequency" name="frequency">
+            <option value="monthly">Monthly</option>
+            <option value="weekly">Weekly</option>
+        </select><br><br>
         <button type="submit">Add Income</button>
     </form>
 
