--- a/income.html
+++ b/income.html
@@ -7,64 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Income Page</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            background-image: url('income.gif');
-            background-size: cover;
-            background-position: center;
-            text-align: center;
-        }
-
-        #total-income,
-        #income-form,
-        #income-history {
-            display: inline-block;
-            margin: 0 auto;
-            text-align: left;
-        }
-
-        .income-entry {
-            margin-bottom: 10px;
-        }
-
-        .edit-btn,
-        .done-btn,
-        .delete-btn {
-            display: none;
-        }
-
-        .edit-btn,
-        .delete-btn {
-            margin-left: 5px;
-        }
-
-        .edit-btn.active,
-        .delete-btn.active {
-            display: inline-block;
-        }
-
-        .edit-btn.active + .done-btn {
-            display: inline-block;
-        }
-    </style>
 </head>
 
 <body>
-    <h1>Income Page</h1>
-    <div id="total-income">0</div>
-
-    <h2>Add Income</h2>
-    <form id="income-form">
-        <label for="source">Source:</label>
-        <input type="text" id="source" name="source" required><br><br>
-        <label for="amount">Amount:</label>
-        <input type="number" id="amount" name="amount" required><br><br>
-        <button type="submit">Add Income</button>
-    </form>
-
-    <h2>Income History</h2>
-    <ul id="income-history"></ul>
-    <button id="more-btn">Show More</button>
+    <div class="container">
+        <h1>Income Page</h1>
+        <p>Total Income Till Now: <span id="total-income">₹ 0</span></p>
+        <h2>Add Income</h2>
+        <form id="income-form">
+            <label for="source">Source:</label>
+            <input type="text" id="source" name="source" required><br><br>
+            <label for="amount">Amount:</label>
+            <input type="number" id="amount" name="amount" required><br><br>
+            <button type="submit">Add Income</button>
+        </form>
+        <h2>Income History</h2>
+        <ul id="income-history">
+            <!-- Sample entry -->
+            <li>Source: Salary, Amount: ₹5000 <button class="edit-btn">Edit</button> <button class="delete-btn">Delete</button></li>
+        </ul>
+        <button id="more-btn">More</button>
+    </div>
 
     <script src="script.js"></script>
 </body>
