--- a/income.html
+++ b/income.html
@@ -11,46 +11,29 @@
         body {
             background-image: url('income.gif');
             background-size: cover;
-            background-repeat: no-repeat;
+            background-position: center;
             height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            margin: 0;
-        }
-
-        .container {
-            background-color: rgba(255, 255, 255, 0.8);
-            padding: 20px;
-            border-radius: 10px;
             text-align: center;
-        }
-
-        h1 {
-            margin-top: 0;
         }
     </style>
 </head>
 
 <body>
-    <div class="container">
-        <h1>Income Page</h1>
-        <p>Total Income Till Now: <span id="total-income">₹ 0</span></p>
-        <h2>Add Income</h2>
-        <form id="income-form">
-            <label for="source">Source:</label>
-            <input type="text" id="source" name="source" required><br><br>
-            <label for="amount">Amount:</label>
-            <input type="number" id="amount" name="amount" required><br><br>
-            <button type="submit">Add Income</button>
-        </form>
-        <h2>Income History</h2>
-        <ul id="income-history">
-            <!-- Sample entry -->
-            <li>Source: Salary, Amount: ₹5000 <button class="edit-btn">Edit</button> <button class="delete-btn">Delete</button></li>
-        </ul>
-        <button id="more-btn">More</button>
-    </div>
+    <h1>Income Page</h1>
+    <div>Total Income: <span id="total-income">₹ 0</span></div>
+    <h2>Add Income</h2>
+    <form id="income-form">
+        <label for="source">Source:</label>
+        <input type="text" id="source" name="source" required><br><br>
+        <label for="amount">Amount:</label>
+        <input type="number" id="amount" name="amount" required><br><br>
+        <button type="submit">Add Income</button>
+    </form>
+    <h2>Income History</h2>
+    <ul id="income-history"></ul>
 
     <script src="script.js"></script>
 </body>
