--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
     <title>Welcome to the Website</title>
     <link rel="stylesheet" href="styles.css">
     <style>
+        /* Add this style for the background GIF */
         body {
             background-image: url('index.gif');
             background-size: cover;
-            background-position: center;
+            background-repeat: no-repeat;
             height: 100vh;
+            margin: 0;
             display: flex;
             justify-content: center;
             align-items: center;
-            text-align: center;
+            flex-direction: column; /* Added to align items vertically */
         }
 
+        /* Style for buttons */
         .block {
             display: block;
             width: 200px;
@@ -39,8 +42,11 @@
 
 <body>
     <h1>Welcome to the Website</h1>
-    <a href="login.html" class="block">Login</a>
-    <a href="signup.html" class="block">Sign Up</a>
+    <!-- Move login and signup buttons to a new line -->
+    <div class="buttons">
+        <a href="login.html" class="block">Login</a>
+        <a href="signup.html" class="block">Sign Up</a>
+    </div>
 </body>
 
 </html>
