--- a/index.html
+++ b/index.html
@@ -1,47 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to the Website</title>
-    <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            background-image: url('index.gif');
-            background-size: cover;
-            background-repeat: no-repeat;
-            height: 100vh;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column; /* Added to align items vertically */
-        }
-
-        .block {
-            display: block;
-            width: 200px;
-            padding: 10px;
-            margin: 10px auto;
-            text-align: center;
-            background-color: #007bff;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-
-        .block:hover {
-            background-color: #0056b3;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Welcome to the Website</title>
+<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
+<section id="indexpage" class="page" style="background-image: url('index.gif');">
     <h1>Welcome to the Website</h1>
     <a href="login.html" class="block">Login</a>
     <a href="signup.html" class="block">Sign Up</a>
+</section>
 </body>
-
 </html>
