--- a/login.html
+++ b/login.html
@@ -1,117 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            background-image: url('login.gif');
-            background-size: cover;
-            background-repeat: no-repeat;
-            height: 100vh;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
-
-        h1,
-        form {
-            color: white;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        input,
-        button {
-            padding: 10px;
-            margin: 5px;
-            width: 200px;
-        }
-
-        button {
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-
-        a {
-            color: white;
-            text-decoration: none;
-        }
-
-        .error {
-            color: red;
-            font-weight: bold;
-        }
-    </style>
+    <!-- Add your CSS link here -->
 </head>
-
 <body>
-    <h1>Login</h1>
-    <form id="login-form">
+    <form action="authenticate.php" method="post">
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required><br><br>
+        <input type="text" id="username" name="username" required>
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br><br>
-        <button type="submit">Login</button>
+        <input type="password" id="password" name="password" required>
+        <input type="submit" value="Login">
     </form>
-
-    <script>
-        document.getElementById('login-form').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            // Get user input
-            var username = document.getElementById('username').value.trim();
-            var password = document.getElementById('password').value.trim();
-
-            // Read the username.txt file
-            fetch('username.txt')
-                .then(response => response.text())
-                .then(data => {
-                    var usernames = data.split('\n');
-                    // Check if the username is found in usernames
-                    if (usernames.includes(username)) {
-                        // Read the password.txt file
-                        fetch('password.txt')
-                            .then(response => response.text())
-                            .then(data => {
-                                var passwords = data.split('\n');
-                                // Find the index of the username in usernames
-                                var index = usernames.indexOf(username);
-                                // Check if the password matches the password at the same index
-                                if (passwords[index] === password) {
-                                    // Redirect to homepage.html if login is successful
-                                    window.location.href = 'homepage.html';
-                                } else {
-                                    // Show error message and redirect to index.html after 3 seconds
-                                    alert('Invalid username or password');
-                                    setTimeout(function() {
-                                        window.location.href = 'index.html';
-                                    }, 3000);
-                                }
-                            });
-                    } else {
-                        // Show error message and redirect to index.html after 3 seconds
-                        alert('Invalid username or password');
-                        setTimeout(function() {
-                            window.location.href = 'index.html';
-                        }, 3000);
-                    }
-                });
-        });
-    </script>
 </body>
-
 </html>
