--- a/signup.html
+++ b/signup.html
@@ -1,90 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
-    <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            background-image: url('login.gif');
-            background-size: cover;
-            background-repeat: no-repeat;
-            height: 100vh;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column; /* Added to align items vertically */
-        }
-
-        .block {
-            display: block;
-            width: 200px;
-            padding: 10px;
-            margin: 10px auto;
-            text-align: center;
-            background-color: #007bff;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-
-        .block:hover {
-            background-color: #0056b3;
-        }
-    </style>
+    <title>Signup</title>
+    <!-- Add your CSS link here -->
 </head>
-
 <body>
-    <h1>Sign Up</h1>
-    <div>
-        <!-- Signup form -->
-        <form id="signup-form">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required><br><br>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required><br><br>
-            <button type="submit">Sign Up</button>
-        </form>
-    </div>
-
-    <script>
-        document.getElementById('signup-form').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            // Get user input
-            var username = document.getElementById('username').value.trim();
-            var password = document.getElementById('password').value.trim();
-
-            // Save username to username.txt
-            fetch('username.txt', {
-                method: 'POST',
-                body: username + '\n',
-                mode: 'cors',
-                cache: 'no-cache',
-                headers: {
-                    'Content-Type': 'text/plain'
-                }
-            });
-
-            // Save password to password.txt
-            fetch('password.txt', {
-                method: 'POST',
-                body: password + '\n',
-                mode: 'cors',
-                cache: 'no-cache',
-                headers: {
-                    'Content-Type': 'text/plain'
-                }
-            });
-
-            // Redirect to homepage.html
-            window.location.href = 'homepage.html';
-        });
-    </script>
+    <form action="register.php" method="post">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+        <input type="submit" value="Sign Up">
+    </form>
 </body>
-
 </html>
