--- a/signup.html
+++ b/signup.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Signup</title>
-    <!-- Add your CSS link here -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <form action="register.php" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        <input type="submit" value="Sign Up">
-    </form>
+    <div class="center">
+        <form action="register.php" method="post">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+            <input type="submit" value="Sign Up" class="button">
+        </form>
+    </div>
 </body>
 </html>
