--- a/income.html
+++ b/income.html
@@ -6,12 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Income Page</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        /* Your existing styles */
-        /* ... */
-    </style>
 </head>
-<body>
+<body style="background-image: url('income.gif'); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
     <div class="container">
         <h1>Income Page</h1>
         <div>Total Income: ₹ <span id="total-income">0</span></div>
@@ -21,7 +17,7 @@
             <input type="text" id="source" name="source" required><br>
             <label for="amount">Amount:</label>
             <input type="number" id="amount" name="amount" required><br>
-            <button type="button" id="add-income">Add Income</button>
+            <button type="submit" id="add-income">Add Income</button>
         </form>
         <h2>Income History</h2>
         <ul id="income-history"></ul>
