--- a/income.html
+++ b/income.html
@@ -10,7 +10,7 @@
 <body style="background-image: url('income.gif'); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
     <div class="container">
         <h1>Income Page</h1>
-        <div>Total Income: ₹ <span id="total-income">0</span></div>
+        <div>Total Income: <span id="total-income">₹0.00</span></div>
         <h2>Add Income</h2>
         <form id="income-form">
             <label for="source">Source:</label>
