--- a/homepage.html
+++ b/homepage.html
@@ -86,7 +86,7 @@
     <h1>Welcome to the Personal Finance Tracker</h1>
     <div class="blocks">
         <a href="income.html">Income</a>
-        <a href="expenses.html">Expenses</a>
+        <a href="expense.html">Expenses</a>
         <a href="savings.html">Savings</a>
     </div>
 
