--- a/income.html
+++ b/income.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +7,7 @@
     <title>Income Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
-<body style="background-image: url('income.gif'); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
+<body>
     <div class="container">
         <h1>Income Page</h1>
         <div>Total Income: ₹ <span id="total-income">0</span></div>
@@ -23,9 +21,8 @@
         </form>
         <h2>Income History</h2>
         <ul id="income-history"></ul>
-        <button id="show-more-income" class="show-more" style="display:none;">Show More</button>
+        <button id="show-more-income" style="display:none;">Show More</button>
     </div>
     <script src="script.js"></script>
 </body>
-
 </html>
