--- a/expense.html
+++ b/expense.html
@@ -25,7 +25,7 @@
         <ul id="expense-history"></ul>
         <button id="show-more-expense" class="show-more" style="display:none;">Show More</button>
     </div>
-    <script src="script.js"></script>
+    <script src="expense.js"></script>
 </body>
 
 </html>
