--- a/income.html
+++ b/income.html
@@ -23,6 +23,6 @@
         <ul id="income-history"></ul>
         <button id="show-more-income" style="display:none;">Show More</button>
     </div>
-    <script src="script.js"></script>
+    <script src="income.js"></script>
 </body>
 </html>
