--- a/savings.html
+++ b/savings.html
@@ -12,6 +12,7 @@
             background-image: url('savings.gif');
             background-repeat: no-repeat;
             background-size: cover;
+            background-color: #f0f0f0; /* Set your desired background color */
         }
 
         .container {
@@ -41,7 +42,7 @@
 
 <body>
     <div class="container">
-        <h1>Total Savings: ₹ <span id="total-savings">0</span></h1>
+        <h1>Total Savings: <span id="total-savings">₹0.00</span></h1>
         <div class="transactions">
             <h2>Last 5 Transactions</h2>
             <ul id="savings-history"></ul>
